feat: redesign header and improve mobile navigation
- Replace minimal page title with fixed header containing brand logo and navigation
- Add mobile hamburger menu with smooth animations and responsive behavior
- Implement font loading states for better visual consistency
- Enhance search input styling with icon and improved focus states
- Update navigation links layout with better spacing and hover effects
- Add responsive design improvements for mobile devices
- Maintain accessibility with proper focus indicators and semantic markup

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>waiwai's Personal Space</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"></noscript>
     <link rel="stylesheet" href="style-swiss.css">
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -11,8 +15,6 @@
     <meta name="keywords" content="waiwai, personal homepage, tech blog, projects showcase">
 </head>
 <body class="home">
-
-
     <!-- 主容器 -->
     <div class="container">
         <!-- 主要内容区域 -->
@@ -73,7 +75,7 @@
                     </a>
                 </article>
                 <article class="card">
-                    <a href="#" class="card-title-link">
+                    <a href="https://waiwai.website/" class="card-title-link">
                         <i class="fas fa-blog tile-icon" aria-hidden="true"></i>
                         <h2>Blog</h2>
                     </a>
