--- a/knowledge.html
+++ b/knowledge.html
@@ -4,17 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Knowledge</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"></noscript>
     <link rel="stylesheet" href="knowledge-swiss.css">
     <link rel="stylesheet" href="header-style.css">
 </head>
 <body>
+    <header class="main-header">
+        <a href="index.html" class="nav-brand">waiwai</a>
+        <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+            <span class="hamburger"></span>
+        </button>
+        <nav class="main-nav">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="knowledge.html" class="nav-link">Knowledge</a>
+            <a href="project.html" class="nav-link">Projects</a>
+            <a href="tool.html" class="nav-link">Tools</a>
+        </nav>
+    </header>
     <div class="container">
         <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar menu" aria-expanded="false">☰</button>
         <div class="main-content-wrapper">
             <aside class="sidebar" tabindex="-1" role="navigation" aria-label="Knowledge categories">
-                <header class="sidebar-header" style="text-align: center;">
-                    <h1 class="page-title"><a href="index.html">Knowledge</a></h1>
-                </header>
                 <nav id="file-tree"></nav>
             </aside>
             <main id="content-display" class="content" role="main" aria-label="Article content">
@@ -32,5 +45,6 @@
     <script src="https://cdn.jsdelivr.net/npm/showdown/dist/showdown.min.js"></script>
     <script src="knowledge.js"></script>
     <script src="scripts/sidebar.js"></script>
+    <script src="scripts/header.js"></script>
 </body>
 </html>
