feat(ui): replace text toggle with hamburger menu icon
Replace the text-based sidebar toggle button with a modern hamburger menu icon for better visual design and mobile experience. The toggle button is now circular with proper positioning below the main header and includes smooth animation transitions. Added responsive behavior where the toggle button moves with the sidebar when open on mobile devices.

--- a/knowledge.html
+++ b/knowledge.html
@@ -25,7 +25,9 @@
         </nav>
     </header>
     <div class="container">
-        <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar menu" aria-expanded="false">☰</button>
+        <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar menu" aria-expanded="false">
+            <span class="hamburger-icon"></span>
+        </button>
         <div class="main-content-wrapper">
             <aside class="sidebar" tabindex="-1" role="navigation" aria-label="Knowledge categories">
                 <nav id="file-tree"></nav>
