feat: restructure static assets into organized directories
Move CSS, JavaScript, and image files into dedicated 'assets' subdirectories to improve project organization and maintainability. CSS files are now located in 'assets/css/', JavaScript files in 'assets/js/', and images in 'assets/images/'. This change makes the project structure more scalable and follows common web development conventions for organizing static assets.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"></noscript>
-    <link rel="stylesheet" href="style-swiss.css">
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="stylesheet" href="assets/css/style-swiss.css">
+    <link rel="icon" href="assets/images/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="waiwai's Personal Space - Technology sharing and project showcase">
     <meta name="keywords" content="waiwai, personal homepage, tech blog, projects showcase">
@@ -22,7 +22,7 @@
             <!-- 个人介绍 -->
             <section class="intro-section">
             <div class="avatar-section">
-                <img src="kobe.png" alt="waiwai24头像" class="avatar">
+                <img src="assets/images/kobe.png" alt="waiwai24头像" class="avatar">
                 <h1>Welcome to waiwai's Space</h1>
                 <p class="subtitle">Explore · Share · Create</p>
             </div>
@@ -89,7 +89,7 @@
         </footer>
     </div>
 
-    <script src="scripts/config.js"></script>
-    <script src="scripts/animations.js"></script>
+    <script src="assets/js/config.js"></script>
+    <script src="assets/js/animations.js"></script>
 </body>
 </html>
