--- a/knowledge.html
+++ b/knowledge.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"></noscript>
-    <link rel="stylesheet" href="knowledge-swiss.css">
-    <link rel="stylesheet" href="header-style.css">
+    <link rel="stylesheet" href="assets/css/knowledge-swiss.css">
+    <link rel="stylesheet" href="assets/css/header-style.css">
 </head>
 <body>
     <header class="main-header">
@@ -45,8 +45,8 @@
         <p>&copy; 2024 waiwai24. All rights reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/showdown/dist/showdown.min.js"></script>
-    <script src="knowledge.js"></script>
-    <script src="scripts/sidebar.js"></script>
-    <script src="scripts/header.js"></script>
+    <script src="assets/js/knowledge.js"></script>
+    <script src="assets/js/sidebar.js"></script>
+    <script src="assets/js/header.js"></script>
 </body>
 </html>
