--- a/project.html
+++ b/project.html
@@ -8,9 +8,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
   <noscript><link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"></noscript>
-  <link rel="icon" href="favicon.png" type="image/png" />
-  <link rel="stylesheet" href="style-project-tool.css" />
-  <link rel="stylesheet" href="header-style.css" />
+  <link rel="icon" href="assets/images/favicon.png" type="image/png" />
+  <link rel="stylesheet" href="assets/css/style-project-tool.css" />
+  <link rel="stylesheet" href="assets/css/header-style.css" />
 </head>
 <body class="project-page">
   <header class="main-header">
@@ -110,6 +110,6 @@
   <footer class="footer">
     <p>&copy; 2024 waiwai24. All rights reserved.</p>
   </footer>
-  <script src="scripts/header.js"></script>
+  <script src="assets/js/header.js"></script>
 </body>
 </html>
