--- a/notes.html
+++ b/notes.html
@@ -12,7 +12,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="header-placeholder"></div>
+    <header class="main-header">
+        <a href="index.html" class="nav-brand">waiwai</a>
+        <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+            <span class="hamburger"></span>
+        </button>
+        <nav class="main-nav">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="notes.html" class="nav-link">Notes</a>
+            <a href="project.html" class="nav-link">Projects</a>
+            <a href="tool.html" class="nav-link">Tools</a>
+        </nav>
+    </header>
     <div class="container">
         <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar menu" aria-expanded="false">
             <span class="hamburger-icon"></span>
@@ -68,7 +79,6 @@
         <p>&copy; 2024 waiwai24. All rights reserved.</p>
     </footer>
     <script src="assets/js/header.js"></script>
-    <script src="assets/js/include-header.js"></script>
     <script src="assets/js/notes.min.js"></script>
 </body>
 </html>
