--- a/project.html
+++ b/project.html
@@ -13,7 +13,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body class="project-page">
-  <div id="header-placeholder"></div>
+  <header class="main-header">
+      <a href="index.html" class="nav-brand">waiwai</a>
+      <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+          <span class="hamburger"></span>
+      </button>
+      <nav class="main-nav">
+          <a href="index.html" class="nav-link">Home</a>
+          <a href="notes.html" class="nav-link">Notes</a>
+          <a href="project.html" class="nav-link">Projects</a>
+          <a href="tool.html" class="nav-link">Tools</a>
+      </nav>
+  </header>
 
   <main id="main-content" role="main">
     <div class="project-list" aria-live="polite">
@@ -119,6 +130,5 @@
     <p>&copy; 2024 waiwai24. All rights reserved.</p>
   </footer>
   <script src="assets/js/header.js"></script>
-  <script src="assets/js/include-header.js"></script>
 </body>
 </html>
