--- a/tool.html
+++ b/tool.html
@@ -14,7 +14,18 @@
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="header-placeholder"></div>
+    <header class="main-header">
+        <a href="index.html" class="nav-brand">waiwai</a>
+        <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+            <span class="hamburger"></span>
+        </button>
+        <nav class="main-nav">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="notes.html" class="nav-link">Notes</a>
+            <a href="project.html" class="nav-link">Projects</a>
+            <a href="tool.html" class="nav-link">Tools</a>
+        </nav>
+    </header>
     <div class="main-content" id="main-content" style="flex-grow: 1; width: 100%;">
         <div class="search-container">
             <form action="https://www.google.com/search" method="get" class="search-form">
@@ -162,6 +173,5 @@
 
     <script src="assets/js/config.js"></script>
     <script src="assets/js/header.js"></script>
-    <script src="assets/js/include-header.js"></script>
 </body>
 </html>
