feat: enhance accessibility and improve SEO with meta tags and visually hidden elements

--- a/notes.html
+++ b/notes.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notes</title>
+    <title>Notes - waiwai's Knowledge Base</title>
+    <meta name="description" content="Browse waiwai's comprehensive knowledge base covering AI, cybersecurity, programming, and more. Explore technical articles and tutorials.">
+    <meta name="keywords" content="notes, knowledge base, technical articles, AI, cybersecurity, programming, tutorials">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/header-style.css">
     <link rel="stylesheet" href="assets/css/notes.min.css">
@@ -24,6 +26,7 @@
             <a href="/tool.html" class="nav-link">Tools</a>
         </nav>
     </header>
+    <h1 class="visually-hidden">Knowledge Base - Technical Notes and Tutorials</h1>
     <div class="container">
         <button id="sidebar-toggle" class="sidebar-toggle" aria-label="Toggle sidebar menu" aria-expanded="false">
             <span class="hamburger-icon"></span>
