--- a/project.html
+++ b/project.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Project</title>
+  <title>Projects - waiwai's Portfolio</title>
+  <meta name="description" content="Explore waiwai's project portfolio including web applications, tools, and open-source contributions. Discover innovative solutions and technical implementations.">
+  <meta name="keywords" content="projects, portfolio, web development, open source, technical projects">
   <link rel="icon" href="assets/images/favicon.png" type="image/png" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/style-project-tool.css" />
@@ -27,6 +29,7 @@
   </header>
 
   <main id="main-content" role="main">
+    <h1 class="visually-hidden">Projects Portfolio</h1>
     <div class="project-list" aria-live="polite">
       <article class="project-item" aria-labelledby="proj-title-rust-c2">
         <div class="meta">
