--- a/tool.html
+++ b/tool.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Google Search</title>
+    <title>Tools - Custom Search Engine</title>
+    <meta name="description" content="Access waiwai's custom Google search engine for quick and efficient web searches.">
+    <meta name="keywords" content="search engine, custom search, Google search, web tools">
     <link rel="icon" href="assets/images/favicon.png" type="image/png" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/style-project-tool.css" />
@@ -26,6 +28,7 @@
             <a href="tool.html" class="nav-link">Tools</a>
         </nav>
     </header>
+    <h1 class="visually-hidden">Custom Search Engine Tool</h1>
     <div class="main-content" id="main-content" style="flex-grow: 1; width: 100%;">
         <div class="search-container">
             <form action="https://www.google.com/search" method="get" class="search-form">
