--- a/project.html
+++ b/project.html
@@ -29,14 +29,13 @@
   </header>
 
   <main id="main-content" role="main">
-    <h1 class="visually-hidden">Projects Portfolio</h1>
     <div class="project-list" aria-live="polite">
       <article class="project-item" aria-labelledby="proj-title-rust-c2">
         <div class="meta">
           <h3 class="title" id="proj-title-rust-c2">
             <a href="https://github.com/waiwai24/rust-c2-framework" target="_blank" rel="noopener">rust-c2-framework</a>
           </h3>
-          <p class="desc">Rust 编写的 C2 框架</p>
+          <p class="desc">A modernized, secure and high-performance C2 solution（This is only for course demonstration and will no longer be maintained or updated）</p>
           <footer class="card-footer">
             <div class="repo-meta" data-repo="waiwai24/rust-c2-framework" aria-hidden="true">加载中...</div>
           </footer>
@@ -48,9 +47,117 @@
           <h3 class="title" id="proj-title-0101">
             <a href="https://github.com/waiwai24/0101" target="_blank" rel="noopener">0101</a>
           </h3>
-          <p class="desc">个人笔记仓库</p>
+          <p class="desc">Personal technical learning notes</p>
           <footer class="card-footer">
             <div class="repo-meta" data-repo="waiwai24/0101" aria-hidden="true">加载中...</div>
+          </footer>
+        </div>
+      </article>
+
+      <article class="project-item" aria-labelledby="proj-title-autoresolv">
+        <div class="meta">
+          <h3 class="title" id="proj-title-autoresolv">
+            <a href="https://github.com/waiwai24/AutoResolv" target="_blank" rel="noopener">AutoResolv</a>
+          </h3>
+          <p class="desc">resolves functions imported from external libraries</p>
+          <footer class="card-footer">
+            <div class="repo-meta" data-repo="waiwai24/AutoResolv" aria-hidden="true">加载中...</div>
+          </footer>
+        </div>
+      </article>
+
+      <article class="project-item" aria-labelledby="proj-title-emba">
+        <div class="meta">
+          <h3 class="title" id="proj-title-emba">
+            <a href="https://github.com/e-m-b-a/emba" target="_blank" rel="noopener">emba</a>
+          </h3>
+          <p class="desc">EMBA - The firmware security analyzer</p>
+          <footer class="card-footer">
+            <div class="repo-meta" data-repo="e-m-b-a/emba" aria-hidden="true">加载中...</div>
+          </footer>
+        </div>
+      </article>
+
+      <article class="project-item" aria-labelledby="proj-title-rustsl">
+        <div class="meta">
+          <h3 class="title" id="proj-title-rustsl">
+            <a href="https://github.com/echQoQ/RustSL" target="_blank" rel="noopener">RustSL</a>
+          </h3>
+          <p class="desc">一款基于 Rust 开发的模块化免杀框架</p>
+          <footer class="card-footer">
+            <div class="repo-meta" data-repo="echQoQ/RustSL" aria-hidden="true">加载中...</div>
+          </footer>
+        </div>
+      </article>
+
+      <article class="project-item" aria-labelledby="proj-title-ksh">
+        <div class="meta">
+          <h3 class="title" id="proj-title-ksh">
+            <a href="https://github.com/waiwai24/ksh" target="_blank" rel="noopener">ksh</a>
+          </h3>
+          <p class="desc">powerful remote control and penetration testing toolkit</p>
+          <footer class="card-footer">
+            <div class="repo-meta" data-repo="waiwai24/ksh" aria-hidden="true">加载中...</div>
+          </footer>
+        </div>
+      </article>
+
+      <article class="project-item" aria-labelledby="proj-title-free-ollama">
+        <div class="meta">
+          <h3 class="title" id="proj-title-free-ollama">
+            <a href="https://github.com/waiwai24/free-ollama" target="_blank" rel="noopener">free-ollama</a>
+          </h3>
+          <p class="desc">A simple tool for discovering and scanning Ollama services</p>
+          <footer class="card-footer">
+            <div class="repo-meta" data-repo="waiwai24/free-ollama" aria-hidden="true">加载中...</div>
+          </footer>
+        </div>
+      </article>
+
+      <article class="project-item" aria-labelledby="proj-title-compiled-glibc">
+        <div class="meta">
+          <h3 class="title" id="proj-title-compiled-glibc">
+            <a href="https://github.com/waiwai24/Compiled-Glibc" target="_blank" rel="noopener">Compiled-Glibc</a>
+          </h3>
+          <p class="desc">The ubuntu glibc package is compiled to facilitate debugging</p>
+          <footer class="card-footer">
+            <div class="repo-meta" data-repo="waiwai24/Compiled-Glibc" aria-hidden="true">加载中...</div>
+          </footer>
+        </div>
+      </article>
+
+      <article class="project-item" aria-labelledby="proj-title-fuzz-target">
+        <div class="meta">
+          <h3 class="title" id="proj-title-fuzz-target">
+            <a href="https://github.com/Now-GodMode/fuzz-target" target="_blank" rel="noopener">fuzz-target</a>
+          </h3>
+          <p class="desc">fuzz my target</p>
+          <footer class="card-footer">
+            <div class="repo-meta" data-repo="Now-GodMode/fuzz-target" aria-hidden="true">加载中...</div>
+          </footer>
+        </div>
+      </article>
+
+      <article class="project-item" aria-labelledby="proj-title-secops-mcp">
+        <div class="meta">
+          <h3 class="title" id="proj-title-secops-mcp">
+            <a href="https://github.com/securityfortech/secops-mcp" target="_blank" rel="noopener">secops-mcp</a>
+          </h3>
+          <p class="desc">All-in-one security testing toolbox that brings together popular open source tools through a single MCP interface. Connected to an AI agent, it enables tasks like pentesting, bug bounty hunting, threat hunting, and more.</p>
+          <footer class="card-footer">
+            <div class="repo-meta" data-repo="securityfortech/secops-mcp" aria-hidden="true">加载中...</div>
+          </footer>
+        </div>
+      </article>
+
+      <article class="project-item" aria-labelledby="proj-title-sevnup">
+        <div class="meta">
+          <h3 class="title" id="proj-title-sevnup">
+            <a href="https://github.com/N1nEmAn/Sevnup" target="_blank" rel="noopener">Sevnup</a>
+          </h3>
+          <p class="desc">a tools to run qemu automatically for simulate firmware of IoT</p>
+          <footer class="card-footer">
+            <div class="repo-meta" data-repo="N1nEmAn/Sevnup" aria-hidden="true">加载中...</div>
           </footer>
         </div>
       </article>
